[gd_scene load_steps=7 format=3 uid="uid://bfyty2mamr5uu"]

[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_game_over.gd" id="1_xwkyw"]
[ext_resource type="Script" path="res://scripts/ui/game_seed_container.gd" id="2_id0ka"]

[sub_resource type="Theme" id="Theme_mrtoi"]
default_font_size = 80

[sub_resource type="Theme" id="Theme_acc8u"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_6tk2t"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_74n00"]
default_font_size = 30

[node name="GameOver" type="Node2D" node_paths=PackedStringArray("winner_label")]
script = ExtResource("1_xwkyw")
winner_label = NodePath("Heading")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.993222, 0.854764, 0.799963, 1)

[node name="Heading" type="Label" parent="."]
offset_left = 782.0
offset_top = 182.0
offset_right = 1159.0
offset_bottom = 292.0
theme = SubResource("Theme_mrtoi")
text = "Game Over"

[node name="RestartButton" type="Button" parent="."]
offset_left = 677.0
offset_top = 531.0
offset_right = 827.0
offset_bottom = 608.0
theme = SubResource("Theme_acc8u")
text = "Restart"

[node name="TitlescreenButton" type="Button" parent="."]
offset_left = 1083.0
offset_top = 527.0
offset_right = 1236.0
offset_bottom = 604.0
theme = SubResource("Theme_acc8u")
text = "Titlescreen"

[node name="ChangeGameModeButton" type="Button" parent="."]
offset_left = 1189.0
offset_top = 706.0
offset_right = 1675.0
offset_bottom = 783.0
theme = SubResource("Theme_6tk2t")
text = "Change game mode"

[node name="GameSeedContainer" type="HBoxContainer" parent="." node_paths=PackedStringArray("game_seed_label")]
offset_right = 82.0
offset_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
script = ExtResource("2_id0ka")
game_seed_label = NodePath("GameSeedLabel")

[node name="GameSeedTextLabel" type="Label" parent="GameSeedContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme = SubResource("Theme_74n00")
text = "Seed:
"

[node name="GameSeedLabel" type="Label" parent="GameSeedContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme = SubResource("Theme_74n00")
text = "
"

[connection signal="button_up" from="RestartButton" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="TitlescreenButton" to="." method="_on_titlescreen_button_up"]
[connection signal="button_up" from="ChangeGameModeButton" to="." method="_on_change_game_mode_button_up"]
[connection signal="gui_input" from="GameSeedContainer" to="GameSeedContainer" method="_on_gui_input"]
